<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_play"
        android:title="@string/action_play"
        android:orderInCategory="100"
        android:icon="@drawable/ic_media_play"
        android:showAsAction="always" />

    <item android:id="@+id/action_pause"
        android:title="@string/action_pause"
        android:orderInCategory="100"
        android:icon="@drawable/ic_media_pause"
        android:visible="false"
        android:showAsAction="always" />

    <item android:id="@+id/action_reset"
        android:title="@string/action_reset"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="always" />
</menu>
