<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <org.osmdroid.views.MapView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mapview"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/datumLabel">
     </org.osmdroid.views.MapView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="1pt"
        android:text="@string/nietgestart"
        android:id="@+id/datumLabel"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrow_up"
        android:id="@+id/arrowUp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/startCounter"
        android:layout_toLeftOf="@+id/startCounter"
        android:textColor="#ff00ff00" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:paddingRight="1pt"
        android:id="@+id/eindeCounter"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textColor="#ffff0000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrow_down"
        android:id="@+id/arrowDown"
        android:layout_toStartOf="@+id/eindeCounter"
        android:layout_toLeftOf="@+id/eindeCounter"
        android:layout_alignParentTop="true"
        android:textColor="#ffff0000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:paddingRight="5pt"
        android:id="@+id/startCounter"
        android:layout_above="@+id/mapview"
        android:layout_toStartOf="@+id/arrowDown"
        android:layout_toLeftOf="@+id/arrowDown"
        android:textColor="#ff00ff00" />

</RelativeLayout>
